# timtest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  timtest.h
cobol/: readme.md  tst_mfcob.cbl  tst_timcob.cob
doc/: readme.txt
header/: timtest.h
timapp/: CMakeLists.txt  catch.hpp  timapp.cpp
timcob/: readme.md  readme.txt  tst_timcob.cob
timlib/: CMakeLists.txt  timtest.cpp
